# nopassdb

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.16  README.md  main.cpp  notes
lib/: base64.hh  sha512.hh
script/: perl.sh  python.sh
src/: arghandle.cpp  arghandle.h  arghelp.cpp  arghelp.h  hash.cpp  hash.h  headers.h  main.cpp  main.h  nopassdb.pro
src/nopassdb/: arghelp.cpp  arghelp.h  clipboard.cpp  clipboard.h  config.cpp  config.h  hash.cpp  hash.h  nopassdb.cpp  nopassdb.h  password.cpp  password.h
src/nopassdb/nt/: password.cpp
src/nopassdb/posix/: password.cpp
